--- a/style.css
+++ b/style.css
@@ -101,9 +101,7 @@
         }
 
 
-        /* seção INICIO */
-
-
+        /* Seção INICIO */
         .container {
             display: flex;
             justify-content: center;
@@ -128,31 +126,31 @@
             background-color: rgba(0, 0, 0, 0.5); /* cor preta com 50% de opacidade */
             z-index: 1;
         }
-        
+
         .apresentacao {
             position: relative;
             z-index: 2; /* Coloca o conteúdo acima da camada transparente */
             max-width: 800px; /* Limita a largura do conteúdo */
         }
-        
+
         .apresentacao h2 {
             color: #fff;
             font-size: 2.5em;
             margin-bottom: 20px;
         }
-        
+
         .apresentacao hr {
             width: 50%;
             margin: 20px auto;
             border: 1px solid #ccc;
         }
-        
+
         .apresentacao h4 {
             color: #ccc;
             font-size: 1.2em;
             margin-bottom: 30px;
         }
-        
+
         .botao {
             display: inline-block;
             padding: 15px 30px;
@@ -160,12 +158,12 @@
             color: #fff;
             text-decoration: none;
             font-size: 1em;
-            border-radius: 50px;
+            border-radius: 10px;
             transition: background-color 0.3s;
         }
-        
+
         .botao:hover {
-            background-color: #5a5a5a;
+            background-color: #404040;
         }
 
 
@@ -250,7 +248,7 @@
             color: #fff;
             text-decoration: none;
             font-size: 1em;
-            border-radius: 50px;
+            border-radius: 10px;
             transition: background-color 0.3s;
             position: relative;
             top: -50px;
@@ -259,7 +257,7 @@
         }
 
         .botao-entre-contato:hover {
-            background-color: #5a5a5a;
+            background-color: #404040;
         }
 
         #escritorio {
@@ -488,7 +486,7 @@
             color: #202020; /* Cor do texto do botão */
             text-decoration: none; /* Remove o sublinhado do botão */
             font-size: 1em; /* Tamanho do texto do botão */
-            border-radius: 50px; /* Bordas arredondadas do botão */
+            border-radius: 10px; /* Bordas arredondadas do botão */
             transition: background-color 0.3s; /* Transição suave da cor do botão */
         }
 
@@ -502,7 +500,8 @@
 
         /* Estilos gerais da seção de contato */
         #contato {
-            background-color: #f8f8f8; /* Cor de fundo semelhante ao exemplo */
+            background-image: url('https://tmartins.adv.br/wp-content/uploads/2024/02/Bg5.jpg');
+            object-fit: cover;
             padding: 50px 0; /* Espaçamento interno */
             display: flex;
             justify-content: center;
@@ -566,12 +565,24 @@
             align-items: center;
             margin-bottom: 20px;
             font-size: 1.1em;
+            transition: color 0.3s; /* Transição suave para a mudança de cor */
         }
 
         .info-item i {
             color: #ccc;
             margin-right: 50px;
             font-size: 1.4em;
+            transition: color 0.3s; /* Transição suave para o ícone */
+        }
+
+        /* Efeito hover nos itens de informação */
+        .info-item:hover {
+            color: #ccc; /* Cor do texto ao passar o mouse */
+        }
+
+        .info-item:hover i {
+            cursor: pointer;
+            color: white; /* Cor do ícone ao passar o mouse */
         }
 
         /* Estilos para o título do formulário */
@@ -735,6 +746,19 @@
                 background-color: #5a5a5a;
                 color: #fff;
             }
+
+            .apresentacao h2 {
+                font-size: 2.2em;
+            }
+            
+            .apresentacao h4 {
+                font-size: 1.1em;
+            }
+        
+            .botao {
+                padding: 12px 25px;
+                font-size: 0.9em;
+            }
         }
 
 
@@ -842,6 +866,24 @@
 
 
         @media (max-width: 768px) {
+
+            .apresentacao h2 {
+                font-size: 1.8em;
+            }
+            
+            .apresentacao h4 {
+                font-size: 1em;
+            }
+    
+            .botao {
+                padding: 10px 20px;
+                font-size: 0.85em;
+            }
+        
+            .apresentacao hr {
+                width: 70%; /* Aumenta a largura do HR para telas menores */
+            }
+
             #botao {
                 flex-direction: column; /* Muda a direção do flex para coluna */
             }
@@ -891,10 +933,37 @@
             .footer {
                 padding: 15px 0; /* Ajusta o padding em telas menores */
             }
+
+            .footer p {
+                font-size: 16px;
+            }
         }
 
 
         @media (max-width: 480px) {
+
+            .apresentacao h2 {
+                font-size: 1.5em;
+            }
+        
+            .apresentacao h4 {
+                font-size: 0.9em;
+            }
+
+            .botao-entre-contato {
+                padding: 8px 15px;
+                font-size: 0.8em;
+            }
+        
+            .botao {
+                padding: 8px 15px;
+                font-size: 0.8em;
+            }
+        
+            .apresentacao hr {
+                width: 80%; /* Ajusta a largura do HR em telas menores */
+            }
+            
             .consultoria h1 {
                 font-size: 1.8em; /* Ajusta o tamanho do título em telas muito pequenas */
             }
