--- a/style.css
+++ b/style.css
@@ -876,7 +876,7 @@
             }
     
             .botao {
-                padding: 10px 20px;
+                padding: 20px 30px;
                 font-size: 0.85em;
             }
         
@@ -912,7 +912,7 @@
             }
         
             .consultoria .botao {
-                padding: 12px 20px; /* Ajusta o padding do botão em telas menores */
+                padding: 18px 18px; /* Ajusta o padding do botão em telas menores */
                 font-size: 0.9em; /* Reduz o tamanho do texto do botão em telas menores */
                 color: #202020;
             }
@@ -951,12 +951,12 @@
             }
 
             .botao-entre-contato {
-                padding: 8px 15px;
+                padding: 15px 20px;
                 font-size: 0.8em;
             }
         
             .botao {
-                padding: 8px 15px;
+                padding: 17px 20px;
                 font-size: 0.8em;
             }
         
@@ -970,6 +970,11 @@
         
             .consultoria p {
                 font-size: 0.9em; /* Ajusta o tamanho do texto em telas muito pequenas */
+            }
+
+            #botao{
+                padding: 100px 10px;
+                text-align: center;
             }
         }
 
