--- a/style.css
+++ b/style.css
@@ -178,6 +178,7 @@
             align-items: center;
             width: 100%;
             height: 60%;
+            min-height: 600px;
             padding: 100px 80px;
         }
 
